Replace javax.annotation.Nullable with jakarta.annotation.Nullable